changed some security and notifications